[gd_scene load_steps=24 format=2]

[ext_resource path="res://scripts/fights/base_fights.gd" type="Script" id=1]
[ext_resource path="res://assets/fights/spriteSheets/Badman.png" type="Texture" id=2]

[sub_resource type="Animation" id=26]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 11, 38, 77, 97 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackBox/Collision:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackBox/Collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Collision:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 33, 48 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Collision:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4.33333, 0 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "backdash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 11, 723, 125, 96 ) ]
}

[sub_resource type="Animation" id=32]
resource_name = "block"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 147, 724, 78, 94 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "hitbox_status"
} ]
}

[sub_resource type="Animation" id=33]
resource_name = "damage"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 11, 863, 93, 98 ) ]
}

[sub_resource type="Animation" id=41]
resource_name = "damage_full"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 115, 863, 89, 98 ), Rect2( 215, 863, 123, 103 ), Rect2( 693, 863, 121, 57 ), Rect2( 826, 862, 94, 90 ), Rect2( 930, 862, 103, 97 ) ]
}

[sub_resource type="Animation" id=42]
resource_name = "damage_on_ar"
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 115, 863, 89, 98 ), Rect2( 215, 863, 123, 103 ), Rect2( 350, 863, 105, 105 ), Rect2( 467, 862, 117, 119 ), Rect2( 595, 862, 86, 115 ), Rect2( 693, 863, 121, 57 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "idle"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 11, 38, 77, 97 ), Rect2( 99, 38, 80, 97 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackBox/Collision:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackBox/Collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Collision:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 33, 48 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Collision:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4.33333, 0 ) ]
}

[sub_resource type="Animation" id=43]
resource_name = "in_floor"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 693, 863, 121, 57 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Collision:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 68, 30 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8.66667, -2.66667 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 12, 451, 99, 87 ), Rect2( 122, 451, 117, 105 ), Rect2( 250, 452, 115, 98 ), Rect2( 382, 451, 142, 109 ) ]
}

[sub_resource type="Animation" id=36]
resource_name = "jumpPunch"
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 11, 1575, 136, 98 ), Rect2( 159, 1574, 216, 105 ), Rect2( 387, 1574, 180, 105 ), Rect2( 11, 1575, 136, 98 ), Rect2( 159, 1574, 216, 105 ), Rect2( 387, 1574, 180, 105 ), Rect2( 11, 1575, 136, 98 ), Rect2( 159, 1574, 216, 105 ), Rect2( 387, 1574, 180, 105 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackBox/Collision:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 121.111, 213.752 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackBox/Collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 523.333, -72.9166 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "atack_move"
} ]
}

[sub_resource type="Animation" id=34]
resource_name = "punch"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 11, 1021, 100, 94 ), Rect2( 123, 1020, 87, 97 ), Rect2( 221, 1020, 163, 92 ), Rect2( 396, 1020, 129, 91 ), Rect2( 221, 1020, 163, 92 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackBox/Collision:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 68.9445, 190.002 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackBox/Collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 599.833, -3.33333 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "basic_attack"
}, {
"args": [ 0.0 ],
"method": "basic_attack"
} ]
}

[sub_resource type="Animation" id=30]
resource_name = "roll"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.00203761, 0.0979624, 0.197962, 0.297962, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 13, 600, 80, 84 ), Rect2( 103, 602, 84, 80 ), Rect2( 198, 599, 80, 84 ), Rect2( 292, 599, 84, 80 ), Rect2( 13, 600, 80, 84 ), Rect2( 103, 602, 84, 80 ), Rect2( 198, 599, 80, 84 ), Rect2( 292, 599, 84, 80 ) ]
}

[sub_resource type="Animation" id=35]
resource_name = "runKick"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 11, 1421, 166, 113 ), Rect2( 194, 1421, 176, 113 ), Rect2( 11, 1421, 166, 113 ), Rect2( 194, 1421, 176, 113 ), Rect2( 11, 1421, 166, 113 ), Rect2( 194, 1421, 176, 113 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackBox/Collision:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 98.3333, 160.835 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackBox/Collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 535, 387.5 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "atack_move"
} ]
}

[sub_resource type="Animation" id=37]
resource_name = "special1"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 10, 1861, 82, 97 ), Rect2( 104, 1861, 110, 97 ), Rect2( 225, 1861, 97, 96 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "projectile"
} ]
}

[sub_resource type="Animation" id=39]
resource_name = "special2"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 11, 2623, 189, 102 ), Rect2( 211, 2622, 193, 103 ), Rect2( 415, 2623, 193, 131 ), Rect2( 621, 2623, 197, 131 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackBox/Collision:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 372.222, 510.005 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackBox/Collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 163.333, 3.33334 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "atack_move"
} ]
}

[sub_resource type="Animation" id=38]
resource_name = "special3"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 14, 2428, 132, 105 ), Rect2( 160, 2428, 168, 132 ), Rect2( 342, 2430, 156, 151 ), Rect2( 513, 2427, 144, 124 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackBox/Collision:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 321.111, 673.339 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackBox/Collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 156.667, 86.6667 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "basic_attack"
}, {
"args": [ 0.0 ],
"method": "basic_attack"
}, {
"args": [ 0.0 ],
"method": "basic_attack"
} ]
}

[sub_resource type="Animation" id=40]
resource_name = "super"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 19, 2795, 195, 96 ), Rect2( 234, 2794, 440, 97 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackBox/Collision:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 813.333, 560.005 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackBox/Collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 60, 26.6667 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "basic_attack"
}, {
"args": [ 0.0 ],
"method": "basic_attack"
}, {
"args": [ 0.0 ],
"method": "basic_attack"
}, {
"args": [ 0.0 ],
"method": "basic_attack"
}, {
"args": [ 0.0 ],
"method": "basic_attack"
} ]
}

[sub_resource type="Animation" id=29]
resource_name = "walk"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 11, 174, 94, 97 ), Rect2( 115, 174, 97, 98 ), Rect2( 223, 174, 92, 98 ) ]
}

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 33, 48 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 0, 0 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 32.6667, 48 )

[node name="Badman" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )

[node name="Texture" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 11, 38, 77, 97 )

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 26 )
anims/backdash = SubResource( 31 )
anims/block = SubResource( 32 )
anims/damage = SubResource( 33 )
anims/damage_full = SubResource( 41 )
anims/damage_on_ar = SubResource( 42 )
anims/idle = SubResource( 27 )
anims/in_floor = SubResource( 43 )
anims/jump = SubResource( 28 )
anims/jumpPunch = SubResource( 36 )
anims/punch = SubResource( 34 )
anims/roll = SubResource( 30 )
anims/runKick = SubResource( 35 )
anims/special1 = SubResource( 37 )
anims/special2 = SubResource( 39 )
anims/special3 = SubResource( 38 )
anims/super = SubResource( 40 )
anims/walk = SubResource( 29 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 4.33333, 0 )
shape = SubResource( 19 )

[node name="ComboTime" type="Timer" parent="."]
wait_time = 0.2

[node name="HitCount" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="DamageCooldown" type="Timer" parent="."]
one_shot = true

[node name="BlockMaxTime" type="Timer" parent="."]
one_shot = true

[node name="Point" type="Position2D" parent="."]
position = Vector2( 100.667, -0.666664 )

[node name="AttackBox" type="Area2D" parent="."]
scale = Vector2( 0.1, 0.1 )
collision_layer = 2
collision_mask = 6
input_pickable = false
monitorable = false

[node name="Collision" type="CollisionShape2D" parent="AttackBox"]
scale = Vector2( 3, 0.999991 )
shape = SubResource( 24 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitoring = false

[node name="Collision" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 4, 0 )
shape = SubResource( 25 )

[connection signal="animation_finished" from="Animation" to="." method="on_animation_finished"]
[connection signal="timeout" from="ComboTime" to="." method="on_ComboTime_timeout"]
[connection signal="timeout" from="HitCount" to="." method="on_HitCount_timeout"]
[connection signal="timeout" from="DamageCooldown" to="." method="on_DamageCooldown_timeout"]
[connection signal="timeout" from="BlockMaxTime" to="." method="_on_BlockMaxTime_timeout"]
[connection signal="area_entered" from="AttackBox" to="." method="on_HitBox_area_entered"]
[connection signal="area_exited" from="AttackBox" to="." method="on_HitBox_area_exited"]
